# backend-memgraph

./: database.py  db.sqlite3  docker-compose.yml  main.py  models.py  playground.py  pyproject.toml  relations.py  requirements.txt  schema.py  test.py
